# SOP-Linux-project

./: CMakeLists.txt  README.md  readme.txt
src/: File.cpp  File.h  MessageQueue.cpp  MessageQueue.h  Process.cpp  Process.h  SeekableFile.cpp  SeekableFile.h  Semaphore.cpp  Semaphore.h  SequentialFile.cpp  SequentialFile.h  SharedMemory.cpp  SharedMemory.h  main.cpp
